@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-18T16:17:29Z",
-  "count_outdated" : 1200,
-  "uniques_outdated" : 757,
+  "timestamp" : "2024-02-19T16:19:35Z",
+  "count_outdated" : 1202,
+  "uniques_outdated" : 758,
   "count" : 1210,
   "uniques" : 762,
   "clones" : [
-    {
-      "timestamp": "2024-02-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-06T00:00:00Z",
       "count": 2,
